// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SteamWidget renders AI summary if present 1`] = `
<DocumentFragment>
  <div
    data-testid="Widget"
  >
    <div
      data-testid="WidgetHeader"
    >
      Steam
    </div>
    <div
      data-testid="ProfileMetricsBadge"
    >
      [{"label":"Games Played","value":5}]
    </div>
    <div
      class="css-q638u5"
    >
      <div
        class="css-uzg792"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-robot css-18ctdm5"
          data-icon="robot"
          data-prefix="fas"
          role="img"
          viewBox="0 0 640 512"
        >
          <path
            d="M352 0c0-17.7-14.3-32-32-32S288-17.7 288 0l0 64-96 0c-53 0-96 43-96 96l0 224c0 53 43 96 96 96l256 0c53 0 96-43 96-96l0-224c0-53-43-96-96-96l-96 0 0-64zM160 368c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zm120 0c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zm120 0c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zM224 176a48 48 0 1 1 0 96 48 48 0 1 1 0-96zm144 48a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zM64 224c0-17.7-14.3-32-32-32S0 206.3 0 224l0 96c0 17.7 14.3 32 32 32s32-14.3 32-32l0-96zm544-32c-17.7 0-32 14.3-32 32l0 96c0 17.7 14.3 32 32 32s32-14.3 32-32l0-96c0-17.7-14.3-32-32-32z"
            fill="currentColor"
          />
        </svg>
        <h3
          class="css-11x17ci"
        >
          AI Summary
        </h3>
      </div>
      <div
        class="css-1ngsodd"
      />
      <p
        class="css-1pqlddt"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-robot css-io06p5"
          data-icon="robot"
          data-prefix="fas"
          role="img"
          viewBox="0 0 640 512"
        >
          <path
            d="M352 0c0-17.7-14.3-32-32-32S288-17.7 288 0l0 64-96 0c-53 0-96 43-96 96l0 224c0 53 43 96 96 96l256 0c53 0 96-43 96-96l0-224c0-53-43-96-96-96l-96 0 0-64zM160 368c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zm120 0c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zm120 0c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zM224 176a48 48 0 1 1 0 96 48 48 0 1 1 0-96zm144 48a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zM64 224c0-17.7-14.3-32-32-32S0 206.3 0 224l0 96c0 17.7 14.3 32 32 32s32-14.3 32-32l0-96zm544-32c-17.7 0-32 14.3-32 32l0 96c0 17.7 14.3 32 32 32s32-14.3 32-32l0-96c0-17.7-14.3-32-32-32z"
            fill="currentColor"
          />
        </svg>
        Generated by Gemini (AI)
      </p>
    </div>
    <div
      class="css-gavibk"
    >
      <h3
        class="css-1pgqsji"
      >
        Recently-Played Games
      </h3>
    </div>
    <p
      class="css-1v9l0er"
    >
      Games I've played in the last two weeks.
    </p>
    <div
      class="css-16xrr5x"
    />
    <div
      class="css-gavibk"
    >
      <h3
        class="css-1pgqsji"
      >
        Leaderboard
      </h3>
    </div>
    <p
      class="css-1v9l0er"
    >
      My top 10 most played games.
    </p>
    <div
      class="css-16ilj6a"
    >
      <div
        class="css-1w2l54n"
      >
        <p
          class="css-ozcv56"
        >
          No gaming data available for library.
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SteamWidget renders correctly with sample data 1`] = `
<DocumentFragment>
  <div
    data-testid="Widget"
  >
    <div
      data-testid="WidgetHeader"
    >
      Steam
    </div>
    <div
      data-testid="ProfileMetricsBadge"
    >
      [{"label":"Games Played","value":5}]
    </div>
    <div
      class="css-gavibk"
    >
      <h3
        class="css-1pgqsji"
      >
        Recently-Played Games
      </h3>
    </div>
    <p
      class="css-1v9l0er"
    >
      Games I've played in the last two weeks.
    </p>
    <div
      class="css-16xrr5x"
    >
      <div
        class="css-1vdkwje"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="Half-Life header"
            class="css-1hlyxwi"
            src="https://example.com/halflife.jpg"
          />
          <div
            class="css-13txfr7"
          />
        </div>
        <div
          class="css-1i1qip1"
        >
          <div
            class="css-1d0l7ja"
          >
            Half-Life
          </div>
          <div
            class="css-k763k9"
          >
            2 hours
          </div>
        </div>
      </div>
      <div
        class="css-1vdkwje"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="Portal header"
            class="css-1hlyxwi"
            src="https://example.com/portal.jpg"
          />
          <div
            class="css-13txfr7"
          />
        </div>
        <div
          class="css-1i1qip1"
        >
          <div
            class="css-1d0l7ja"
          >
            Portal
          </div>
          <div
            class="css-k763k9"
          >
            45 minutes
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-gavibk"
    >
      <h3
        class="css-1pgqsji"
      >
        Leaderboard
      </h3>
    </div>
    <p
      class="css-1v9l0er"
    >
      My top 10 most played games.
    </p>
    <div
      class="css-16ilj6a"
    >
      <div
        class="css-pk064c"
      >
        <div
          class="css-1vdkwje"
        >
          <div
            class="css-w24l45"
          >
            <img
              alt="Cities: Skylines header"
              class="css-1hlyxwi"
              src="https://example.com/cities-icon.jpg"
            />
            <div
              class="css-hx60di"
            >
              1
            </div>
            <div
              class="css-13txfr7"
            />
          </div>
          <div
            class="css-1i1qip1"
          >
            <div
              class="css-1d0l7ja"
            >
              Cities: Skylines
            </div>
            <div
              class="css-k763k9"
            >
              757.35h total • 2 hours recently
            </div>
          </div>
        </div>
        <div
          class="css-1vdkwje"
        >
          <div
            class="css-w24l45"
          >
            <img
              alt="ARK: Survival Evolved header"
              class="css-1hlyxwi"
              src="https://example.com/ark-icon.jpg"
            />
            <div
              class="css-hx60di"
            >
              2
            </div>
            <div
              class="css-13txfr7"
            />
          </div>
          <div
            class="css-1i1qip1"
          >
            <div
              class="css-1d0l7ja"
            >
              ARK: Survival Evolved
            </div>
            <div
              class="css-k763k9"
            >
              277.83h total
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-yoczvr"
      >
        <div
          class="css-aq86v7"
        >
          Total Hours: 
          <span
            class="css-rba8ex"
          >
            1035.2h
          </span>
        </div>
        <div
          class="css-aq86v7"
        >
          Average: 
          <span
            class="css-rba8ex"
          >
            517.6h per game
          </span>
        </div>
      </div>
      <div
        class="css-the6ff"
      >
        <a
          class="css-drd097"
          href="https://steamcommunity.com/id/themeuser/games/?tab=all"
        >
          View complete gaming library
          <span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-up-right-from-square fa-xs"
              data-icon="up-right-from-square"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M290.4 19.8C295.4 7.8 307.1 0 320 0L480 0c17.7 0 32 14.3 32 32l0 160c0 12.9-7.8 24.6-19.8 29.6s-25.7 2.2-34.9-6.9L400 157.3 246.6 310.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L354.7 112 297.4 54.6c-9.2-9.2-11.9-22.9-6.9-34.9zM0 176c0-44.2 35.8-80 80-80l80 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-80 0c-8.8 0-16 7.2-16 16l0 256c0 8.8 7.2 16 16 16l256 0c8.8 0 16-7.2 16-16l0-80c0-17.7 14.3-32 32-32s32 14.3 32 32l0 80c0 44.2-35.8 80-80 80L80 512c-44.2 0-80-35.8-80-80L0 176z"
                fill="currentColor"
              />
            </svg>
          </span>
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SteamWidget renders error state (hasFatalError) 1`] = `
<DocumentFragment>
  <div
    data-testid="Widget"
  >
    <div
      data-testid="WidgetHeader"
    >
      Steam
    </div>
    <div
      data-testid="ProfileMetricsBadge"
    >
      [{"label":"Games Played","value":5}]
    </div>
    <div
      class="css-gavibk"
    >
      <h3
        class="css-1pgqsji"
      >
        Recently-Played Games
      </h3>
    </div>
    <p
      class="css-1v9l0er"
    >
      Games I've played in the last two weeks.
    </p>
    <div
      class="css-16xrr5x"
    />
    <div
      class="css-gavibk"
    >
      <h3
        class="css-1pgqsji"
      >
        Leaderboard
      </h3>
    </div>
    <p
      class="css-1v9l0er"
    >
      My top 10 most played games.
    </p>
    <div
      class="css-16ilj6a"
    >
      <div
        class="css-1w2l54n"
      >
        <p
          class="css-ozcv56"
        >
          No gaming data available for library.
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SteamWidget renders loading state 1`] = `
<DocumentFragment>
  <div
    data-testid="Widget"
  >
    <div
      data-testid="WidgetHeader"
    >
      Steam
    </div>
    <div
      data-testid="ProfileMetricsBadge"
    >
      []
    </div>
    <div
      class="css-gavibk"
    >
      <h3
        class="css-1pgqsji"
      >
        Recently-Played Games
      </h3>
    </div>
    <p
      class="css-1v9l0er"
    >
      Games I've played in the last two weeks.
    </p>
    <div
      class="css-16xrr5x"
    />
    <div
      class="css-gavibk"
    >
      <h3
        class="css-1pgqsji"
      >
        Leaderboard
      </h3>
    </div>
    <p
      class="css-1v9l0er"
    >
      My top 10 most played games.
    </p>
    <div
      class="css-16ilj6a"
    >
      <div
        class="css-e2czm4"
      >
        <div
          class="css-1omu3y4"
        />
        <p
          class="css-1snu6r4"
        >
          Loading Gaming Library...
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SteamWidget renders with empty metrics 1`] = `
<DocumentFragment>
  <div
    data-testid="Widget"
  >
    <div
      data-testid="WidgetHeader"
    >
      Steam
    </div>
    <div
      data-testid="ProfileMetricsBadge"
    >
      []
    </div>
    <div
      class="css-gavibk"
    >
      <h3
        class="css-1pgqsji"
      >
        Recently-Played Games
      </h3>
    </div>
    <p
      class="css-1v9l0er"
    >
      Games I've played in the last two weeks.
    </p>
    <div
      class="css-16xrr5x"
    />
    <div
      class="css-gavibk"
    >
      <h3
        class="css-1pgqsji"
      >
        Leaderboard
      </h3>
    </div>
    <p
      class="css-1v9l0er"
    >
      My top 10 most played games.
    </p>
    <div
      class="css-16ilj6a"
    >
      <div
        class="css-1w2l54n"
      >
        <p
          class="css-ozcv56"
        >
          No gaming data available for library.
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SteamWidget renders with empty recentlyPlayedGames and ownedGames 1`] = `
<DocumentFragment>
  <div
    data-testid="Widget"
  >
    <div
      data-testid="WidgetHeader"
    >
      Steam
    </div>
    <div
      data-testid="ProfileMetricsBadge"
    >
      [{"label":"Games Played","value":5}]
    </div>
    <div
      class="css-gavibk"
    >
      <h3
        class="css-1pgqsji"
      >
        Recently-Played Games
      </h3>
    </div>
    <p
      class="css-1v9l0er"
    >
      Games I've played in the last two weeks.
    </p>
    <div
      class="css-16xrr5x"
    />
    <div
      class="css-gavibk"
    >
      <h3
        class="css-1pgqsji"
      >
        Leaderboard
      </h3>
    </div>
    <p
      class="css-1v9l0er"
    >
      My top 10 most played games.
    </p>
    <div
      class="css-16ilj6a"
    >
      <div
        class="css-1w2l54n"
      >
        <p
          class="css-ozcv56"
        >
          No gaming data available for library.
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
